<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Multiscreen Photo</string>
    <string name="activity_name"> Photos</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="get_start">Get Started!</string>
    <string name="action_more"> More</string>
    <string name="action_help">Help</string>
    <string name="select_tv">Connect to:</string>
    <string name="compatible_tv">This app works with 2015 J Series Samsung SmartTVs.</string>
    <string name="compatible_tv_message">Most J Series models are supported but here are the recommended model series.</string>
    <string name="list_compatible_tv">List of Compatible TVs</string>
    <string name="connected_to">Connected to:</string>
    <string name="switch_to">Switch to:</string>
    <string name="select_screen_size">Select screen size</string>
    <string name="action_connectivity">Connectivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome_label">Welcome! please choose a device to connect.</string>
    <string name="service_lost">Service lost.</string>
    <string name="title_activity_screen_slide"></string>
    <string name="channel_id">com.samsung.multiscreen.photos</string>
    <string name="app_url">http://multiscreen.samsung.com/app-sample-photos/tv/index.html</string>
    <string name="welcome_legend">View photos from your mobile device on a 2015 Samsung Smart TV.</string>
    <string name="note_legend">Make sure your TV and mobile device are on the same WiFi network.</string>
    <string name="title_activity_more">More</string>
    <string name="about_multiscreen">About MultiScreen Photos</string>
    <string name="about_info">View photos from your mobile device on a 2015 Samsung Smart Tv.</string>
    <string name="get_started_more">How to connect:</string>
    <string name="compatible">1. You need a compatible Samsung 2015 Smart TV.</string>
    <string name="mobile_and_tv">2. Your mobile device and TV must be on the same WiFi network.</string>
    <string name="when_mobile_discovers">3. When your mobile device discovers a TV,\u0020\u0020 will appear on the top right corner of screen.</string>
    <string name="tap_to_select">4. Tap \u0020\u0020\u0020 to select the tv you wish to use.</string>
    <string name="when_turn_to">5. When \u0020\u0020\u0020 turns to \u0020\u0020, you are connected.</string>
    <string name="tap_to_disconnect">Tap \u0020\u0020\u0020 to disconnect or switch to another TV.</string>
    <string name="contact">Contact</string>
    <string name="more_info">Do you want more information about the Multiscreen SDK?</string>
    <string name="send_email">Send email to multiscreen@sisa.samsung.com.</string>
    <string name="contact_email">multiscreen@sisa.samsung.com</string>
    <string name="answer_questions">We\'d be happy to answer all your questions.</string>
    <string name="title_activity_compatible_list">CompatibleListActivity</string>
    <string name="sending_photo_error">Could not send photo to TV. Try again later.</string>
    <string name="image_load_failed">Loading photo failed. Photo format may not be supported on this phone. </string>
</resources>
